# danta

./: .gitignore  pyproject.toml  setup.cfg
src/danta/: __init__.py  cli.py  manager.py  target.py  tracked_module.py
