[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "google"
split_before_first_argument = true
column_limit = 120
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
arithmetic_precedence_indication = true

# [tool.coverage.run]
# plugins = ["Cython.Coverage"]
