[metadata]
name = danta
version = 0.1
#attr: danta.__version__
author = Daniel Thorngren
author_email = dpthorngren@gmail.com
description = A simple Python task runner.
license = MIT

[options]
packages = danta
package_dir =
    =src
# install_requires =

; [options.extras_require]
; test =
;     dynesty
;     pytest
;     flake8
;     pytest-cov
;     pytest-rerunfailures
;     genbadge[all]

[options.entry_points]
console_scripts =
    danta = danta.cli:main

[flake8]
max_line_length=120
extend-ignore = [E227]
